git-debimport pcre3_8.02-1.1.diff.gz

--- a/doc/pcre_version.3
+++ b/doc/pcre_version.3
@@ -7,7 +7,7 @@ PCRE - Perl-compatible regular expressions
 .B #include <pcre.h>
 .PP
 .SM
-.B char *pcre_version(void);
+.B const char *pcre_version(void);
 .
 .SH DESCRIPTION
 .rs
