--- a/doc/pcreapi.3
+++ b/doc/pcreapi.3
@@ -96,7 +96,7 @@ PCRE - Perl-compatible regular expressions
 .PP
 .B int pcre_config(int \fIwhat\fP, void *\fIwhere\fP);
 .PP
-.B char *pcre_version(void);
+.B const char *pcre_version(void);
 .PP
 .B void *(*pcre_malloc)(size_t);
 .PP
